[tool.poetry]
name = "template"
version = "0.1.0"
description = ""
authors = ["yukke42 <yukke42@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.1.1+cu121", source = "torch-cuda121"}
torchvision = {version = "^0.16.1+cu118", source = "torch-cuda121"}
jupyterlab = "^4.0.9"
pandas = "^2.1.3"
polyleven = "^0.8"
transformers = {extras = ["torch"], version = "^4.35.2"}
datasets = "^2.15.0"
plotly = "^5.18.0"
matplotlib = "^3.8.2"
loguru = "^0.7.2"


[[tool.poetry.source]]
name = "torch-cuda121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
